--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,57 @@
-alembic==1.14.1
-Authlib==1.4.1
+alembic==1.15.2
+Authlib==1.5.2
 blinker==1.9.0
-cachetools==5.5.1
+cachelib==0.13.0
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-cryptography==44.0.1
+cryptography==44.0.2
+dash==2.9.3
+dash-bootstrap-components==1.7.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 Flask==3.1.0
-Flask-Cors==4.0.0
 Flask-Login==0.6.3
+Flask-Mailman==1.1.1
 Flask-Migrate==4.1.0
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
-google-api-core==2.24.1
-google-api-python-client==2.160.0
+Flask-WTF==1.2.2
 google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-cloud-core==2.4.1
-google-cloud-secret-manager==2.23.0
-google-cloud-storage==2.16.0
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.67.0rc1
-grpc-google-iam-v1==0.14.0
-grpcio==1.70.0
-grpcio-status==1.70.0
-httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.5
-Mako==1.3.8
-MarkupSafe==2.1.5
-oauthlib==3.2.2
+Jinja2==3.1.6
+jwt==1.3.1
+Mako==1.3.10
+MarkupSafe==3.0.2
+msal==1.32.0
+msgspec==0.19.0
+narwhals==1.34.1
+numpy==2.2.4
 packaging==24.2
-pipdeptree==2.25.0
-proto-plus==1.26.0
-protobuf==5.29.3
+pandas==2.2.3
+patsy==1.0.1
+plotly==6.0.1
+plotly-express==0.4.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 PyJWT==2.10.1
-pyparsing==3.2.1
-python-dotenv==1.0.1
-requests==2.31.0
-requests-oauthlib==1.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
 rsa==4.9
-SQLAlchemy==2.0.38
-typing_extensions==4.12.2
-uritemplate==4.1.1
-urllib3==2.3.0
+scipy==1.15.2
+six==1.17.0
+SQLAlchemy==2.0.40
+statsmodels==0.14.4
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
 Werkzeug==3.1.3
-plotly==5.19.0
-dash-bootstrap-components==1.5.0
-flask-wtf
-Flask-Session
-msal
-flask-mailman
+WTForms==3.2.1
